# shticker_book_unwritten

./: .gitignore  .markdownlint.json  Cargo.toml  LICENSE.bsdiff4  README.md  build.sh  deny.toml  rustfmt.toml
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  rust.yml
src/: accounts.rs  command.rs  config.rs  error.rs  keyring.rs  login.rs  main.rs  patch.rs  update.rs  util.rs
