[package]
name = "shticker_book_unwritten"
version = "1.2.1"
authors = ["Dr. Jonathan Helianthicus Doe, IV <augiii@protonmail.com>"]
edition = "2021"
description = "Minimal CLI launcher for the Toontown Rewritten MMORPG"
repository = """
https://github.com/JonathanHelianthicusDoe/shticker_book_unwritten"""
readme = "README.md"
keywords = ["cli", "launcher", "ttr", "toontown", "rewritten"]
categories = ["games"]
license = "GPL-3.0-or-later"

[features]
default = []
secret-store = ["dep:secret-service"]

[dependencies]
bzip2 = "0.4.4"
rpassword = "7.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha1 = "0.10.6"

[dependencies.clap]
version = "4.5.3"
default-features = false
features = [
    "std",
    "cargo",
    "suggestions",
    "help",
    "usage",
    "error-context",
    "wrap_help",
]

[dependencies.reqwest]
version = "0.12.1"
default-features = false
features = ["blocking", "rustls-tls"]

[dependencies.secret-service]
version = "5.0.0"
optional = true
default-features = false
features = ["rt-tokio-crypto-rust"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
strip = true
